--- a/Raiding Revisited/Assets/UI Toolkit/Inspector.uxml
+++ b/Raiding Revisited/Assets/UI Toolkit/Inspector.uxml
@@ -6,9 +6,8 @@
             <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="label1" />
             <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="label2" />
         </ui:VisualElement>
-        <ui:VisualElement name="VisualElement" class="datumHolder" />
-        <ui:VisualElement name="VisualElement" class="datumHolder" />
-        <ui:VisualElement name="VisualElement" class="datumHolder" />
-        <ui:VisualElement name="VisualElement" class="datumHolder" />
+        <ui:VisualElement class="datumHolder">
+            <ui:DropdownField label="Dropdown" index="-1" choices="one,two,three" name="Options" style="flex-direction: column;" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
